[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
name = "pallet-xcm"
version = "0.9.25"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", optional = true, features = ["derive"] }
log = { version = "0.4.17", default-features = false }

sp-std = { git = "https://github.com/sora-xor/substrate.git", default-features = false, branch = "polkadot-v0.9.25-xcm-v3-and-bridges" }
sp-runtime = { git = "https://github.com/sora-xor/substrate.git", default-features = false, branch = "polkadot-v0.9.25-xcm-v3-and-bridges" }
sp-core = { git = "https://github.com/sora-xor/substrate.git", default-features = false, branch = "polkadot-v0.9.25-xcm-v3-and-bridges" }
sp-io = { git = "https://github.com/sora-xor/substrate.git", default-features = false, branch = "polkadot-v0.9.25-xcm-v3-and-bridges" }
frame-support = { git = "https://github.com/sora-xor/substrate.git", default-features = false, branch = "polkadot-v0.9.25-xcm-v3-and-bridges" }
frame-system = { git = "https://github.com/sora-xor/substrate.git", default-features = false, branch = "polkadot-v0.9.25-xcm-v3-and-bridges" }

xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.25-xcm-v3-and-bridges" }
polkadot-runtime-parachains = { path = "../../runtime/parachains" }
polkadot-parachain = { path = "../../parachain" }
xcm-builder = { path = "../xcm-builder" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = [
	"frame-system/runtime-benchmarks"
]
